--- a/_doc/UserGuide.tex
+++ b/_doc/UserGuide.tex
@@ -2,7 +2,9 @@
 
 \usepackage[margin = 3cm]{geometry}
 \usepackage{amsmath, amssymb}
+\usepackage{float}
 \usepackage[T1]{fontenc}
+\usepackage{graphicx}
 \usepackage{listings}
 \usepackage{xcolor}
 
@@ -502,6 +504,50 @@ ans =
 which agree with \eqref{stiffness_3d}-\eqref{mass_3d} up to machine precision.
 
 
+\section{Numerical example: Laplace equation in 3D}
+We now test the convergence of Virtual Elements, implemented via VEMLAB,  for the following  Laplace equation on the unit cube $\Omega = [0,1]^3$:
+\begin{equation}
+\label{experiment_laplace_equation_3d}
+\begin{cases}
+-&\Delta u + u = (3\pi^2+1)\cos(\pi x)\cos(\pi y)\cos(\pi z) \qquad \text{in}\ \Omega\\
+&\nabla u \cdot \boldsymbol{n} = 0 \qquad \text{on}\ \partial \Omega
+\end{cases}
+\end{equation}
+whose exact solution  is given by
+\begin{equation}
+u(x,y,z) = \cos(\pi x)\cos(\pi y)\cos(\pi z).
+\end{equation}
+We consider a sequence of nine cubic meshes $i=1,\dots,9$. The $i$-th mesh, obtained by subdividing each dimension into $5i$ intervals,  has $(5i)^3$ elements, $N_i = (5i+1)^3$ nodes and meshsize $h_i = \sqrt{3}/(5i)$, as displayed in Table \ref{tab:laplace_3d_convergence}. On each mesh we solve the discrete problem,  we compute the error in $L^2(\Omega)$ norm and the respective convergence rate. As shown in Table \ref{tab:laplace_3d_convergence}, the convergence in $L^2(\Omega)$ norm is optimal, i.e. quadratic. The numerical solution obtained on the finest mesh is plotted in Fig.  \ref{fig:laplace_3d_numsol}.
+
+\begin{table}[H]
+\caption{Laplace equation \eqref{experiment_laplace_equation_3d} on the unit cube $\Omega = [0,1]^3$. The VEM implemented in VEMLAB shows optimal quadratic convergence in $L^2(\Omega)$ norm.}
+\begin{center}
+\begin{tabular}{c | c | c | c | c}
+$i$ & $N$ & $h$ & $L^2(\Omega)$ error & $L^2(\Omega)$ rate\\
+\hline
+1 & 216 & 0.3464 &   2.1663e-02 &     -\\
+2 & 1331 & 0.1732 & 1.9934e-02 & 0.1200    \\
+3 & 4096 & 0.1155 & 1.0393e-02 & 1.6062    \\
+4 & 9261 & 0.0866 &  6.1700e-03 & 1.8126    \\
+5 &  17576 &  0.0693 & 4.0474e-03 & 1.8895    \\
+6 & 29791  & 0.0577 & 2.8484e-03 & 1.9269    \\
+7 &  46656 & 0.0495 & 2.1095e-03 & 1.9480    \\
+8 & 68921 & 0.0433 & 1.6235e-03  & 1.9611   \\
+9 & 97336 & 0.0385 &  1.2873e-03 &  1.9698
+\end{tabular}
+\end{center}
+\label{tab:laplace_3d_convergence}
+\end{table}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.5]{laplace3dcube_numsol_Nx46.eps}
+\end{center}
+\caption{Laplace equation \eqref{experiment_laplace_equation_3d} on the unit cube $\Omega = [0,1]^3$: numerical solution obtained on the finest mesh for $i=9$ with $N= 97336$ nodes.}
+\label{fig:laplace_3d_numsol}
+\end{figure}
+
+ 
 \bibliographystyle{plain}
 \bibliography{bibliography}
 
