--- a/_doc/UserGuide.tex
+++ b/_doc/UserGuide.tex
@@ -504,7 +504,7 @@ ans =
 which agree with \eqref{stiffness_3d}-\eqref{mass_3d} up to machine precision.
 
 
-\section{Numerical example: Laplace equation in 3D}
+\section{Numerical example: Laplace equation on the cube}
 We now test the convergence of Virtual Elements, implemented via VEMLAB,  for the following  Laplace equation on the unit cube $\Omega = [0,1]^3$:
 \begin{equation}
 \label{experiment_laplace_equation_3d}
@@ -547,6 +547,52 @@ $i$ & $N$ & $h$ & $L^2(\Omega)$ error & $L^2(\Omega)$ rate\\
 \label{fig:laplace_3d_numsol}
 \end{figure}
 
+ 
+\section{Numerical example: Laplace equation on the sphere}
+We now consider another domain, the unit sphere $\Omega$ in 3D. The test problem, in spherical coordinates, is as follows
+\begin{equation}
+\label{experiment_laplace_equation_3d_sphere}
+\begin{cases}
+-&\Delta u + u = 4(3-5r^2) + (1-r^2)^2 \qquad \text{in}\ \Omega\\
+&\nabla u \cdot \boldsymbol{n} = 0 \qquad \text{on}\ \partial \Omega
+\end{cases}
+\end{equation}
+whose exact solution in spherical coordinates is given by
+\begin{equation}
+u(x,y,z) = (1-r^2)^2
+\end{equation}
+We consider a sequence of four cubic meshes $i=1,\dots,4$. The $i$-th mesh is obtained by subdividing each dimension into $5i$ intervals, thereby producing a cubic bounding mesh.  The cubic elements that are not fully contained in the sphere are then discarded. Finally, the outer faces of the resulting cubic mesh are extruded to fill the outer part of the sphere with irregular $8$-vertex polyhedra.  Such a mesh is shown in Fig.  \ref{fig:extruded_mesh_sphere}. On each mesh we solve the discrete problem,  we compute the error in $L^2(\Omega)$ norm and the respective convergence rate. As shown in Table \ref{tab:laplace_3d_convergence_sphere}, the convergence in $L^2(\Omega)$ norm is optimal, i.e. quadratic. The numerical solution obtained on the finest mesh is plotted in Fig.  \ref{fig:laplace_3d_numsol_sphere}.
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.5]{extruded_mesh_sphere.eps}
+\end{center}
+\caption{Example of an extruded cubic mesh on the unit sphere.  The outermost elements, highlighted in yellow are irregular (but still star-shaped or even convex) $8$-vertex polyhedra.  The interior is filled with cubes (red).}
+\label{fig:extruded_mesh_sphere}
+\end{figure} 
+
+\begin{table}[H]
+\caption{Laplace equation \eqref{experiment_laplace_equation_3d_sphere} on the unit sphere $\Omega$ in 3D. The VEM implemented in VEMLAB shows optimal quadratic convergence in $L^2(\Omega)$ norm.}
+\begin{center}
+\begin{tabular}{c | c | c | c | c}
+$i$ & $N$ & $h$ & $L^2(\Omega)$ error & $L^2(\Omega)$ rate\\
+\hline
+1 & 111 & 0.6928 &   7.4396e-01 &     -\\
+2 & 799 & 0.3464 & 4.4137e-01 & 0.7532    \\
+3 & 5749 & 0.1732 & 1.2532e-01 & 1.8164    \\
+4 & 40381 & 0.0866 &  3.3139e-02 & 1.9190
+\end{tabular}
+\end{center}
+\label{tab:laplace_3d_convergence_sphere}
+\end{table}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.5]{laplace3dsphere_numsol_Nx41.eps}
+\end{center}
+\caption{Laplace equation \eqref{experiment_laplace_equation_3d_sphere} on the unit sphere$\Omega$ in 3D: numerical solution obtained on the finest mesh for $i=4$ with $N= 40381$ nodes.}
+\label{fig:laplace_3d_numsol_sphere}
+\end{figure} 
  
 \bibliographystyle{plain}
 \bibliography{bibliography}
