--- a/_doc/bibliography.bib
+++ b/_doc/bibliography.bib
@@ -1,10 +1,21 @@
 @article{hitchhikers,
   title={The hitchhiker's guide to the virtual element method},
-  author={Beir{\~a}o da Veiga, L and Brezzi, Franco and Marini, Luisa Donatella and Russo, Alessandro},
+  author={Beir{\~a}o da Veiga, L and Brezzi, F and Marini, L D and Russo, A},
   journal={Mathematical models and methods in applied sciences},
   volume={24},
   number={08},
   pages={1541--1573},
   year={2014},
   publisher={World Scientific}
+}
+
+@article{elliott2013finite,
+  title={Finite element analysis for a coupled bulk--surface partial differential equation},
+  author={Elliott, C M and Ranner, T},
+  journal={IMA Journal of Numerical Analysis},
+  volume={33},
+  number={2},
+  pages={377--402},
+  year={2013},
+  publisher={OUP}
 }
