--- a/_doc/bibliography.bib
+++ b/_doc/bibliography.bib
@@ -19,3 +19,14 @@
   year={2013},
   publisher={OUP}
 }
+
+@article{frittelli2021bulk,
+  title={Bulk-surface virtual element method for systems of PDEs in two-space dimensions},
+  author={Frittelli, M and Madzvamuse, A and Sgura, I},
+  journal={Numerische Mathematik},
+  volume={147},
+  number={2},
+  pages={305--348},
+  year={2021},
+  publisher={Springer}
+}
