--- a/_doc/UserGuide.tex
+++ b/_doc/UserGuide.tex
@@ -23,7 +23,7 @@
 \maketitle
 
 \section*{Introduction}
-VEMLAB is an object-oriented MATLAB library for the computation of the VEM matrices of lowest order ($k=1$) of the PDE problem
+VEMLAB is an object-oriented MATLAB library for the computation of the VEM matrices of lowest order ($k=1$) of the PDE problem (but also more general reaction-diffusion systems of bulk-only or bulk-surface type)
 \begin{equation}
 \frac{\partial u}{\partial t} - \Delta u + u = 0,
 \end{equation}
