Fixes mesh generation on the sphere - no holes, overlaps, or duplicate nodes

--- a/_doc/bibliography.bib
+++ b/_doc/bibliography.bib
@@ -6,7 +6,8 @@
   number={08},
   pages={1541--1573},
   year={2014},
-  publisher={World Scientific}
+  publisher={World Scientific},
+  doi={10.1142/S021820251440003X}
 }
 
 @article{elliott2013finite,
@@ -17,16 +18,428 @@
   number={2},
   pages={377--402},
   year={2013},
-  publisher={OUP}
+  doi={10.1093/imanum/drs022 }
 }
 
+
+
 @article{frittelli2021bulk,
-  title={Bulk-surface virtual element method for systems of PDEs in two-space dimensions},
+  title={Bulk-surface virtual element method for systems of {PDEs} in two-space dimensions},
   author={Frittelli, M and Madzvamuse, A and Sgura, I},
   journal={Numerische Mathematik},
   volume={147},
   number={2},
   pages={305--348},
   year={2021},
-  publisher={Springer}
+  doi={10.1007/s00211-020-01167-3}
+}
+
+@article{frittelli2023bsrds,
+title={The bulk-surface virtual element method for reaction-diffusion
+{PDEs}: analysis and applications},
+  author={Frittelli, M and Madzvamuse, A and Sgura, I},
+  journal={Communications in Computational Physics},
+  volume={Accepted},
+  year={2023},
+  publisher={Global Science Press}
+}
+
+@article{cangiani2017posteriori,
+  title={A posteriori error estimates for the virtual element method},
+  author={Cangiani, A and Georgoulis, E H and Pryer, T and Sutton, O J},
+  journal={Numerische mathematik},
+  volume={137},
+  pages={857--893},
+  year={2017},
+  doi={10.1007/s00211-017-0891-9}
+}
+
+@article{van2022mesh,
+  title={On mesh refinement procedures for the virtual element method for two-dimensional elastic problems},
+  author={van Huyssteen, D and Rivarola, F L and Etse, G and Steinmann, P},
+  journal={Computer Methods in Applied Mechanics and Engineering},
+  volume={393},
+  pages={114849},
+  year={2022},
+  doi={10.1016/j.cma.2022.114849}
+}
+
+@article{da2014virtual,
+  title={A virtual element method with arbitrary regularity},
+  author={ Beir{\~a}o da Veiga, L and Manzini, G},
+  journal={IMA Journal of Numerical Analysis},
+  volume={34},
+  number={2},
+  pages={759--781},
+  year={2014},
+  doi={10.1093/imanum/drt018}
+}
+
+@article{da2020c1,
+  title={A {$\mathcal{C}^1$} virtual element method on polyhedral meshes},
+  author={Beir{\~a}o da Veiga, L  and Dassi, F and Russo, A},
+  journal={Computers \& Mathematics with Applications},
+  volume={79},
+  number={7},
+  pages={1936--1955},
+  year={2020},
+  doi={10.1016/j.camwa.2019.06.019}
+}
+
+@article{beirao2013basic,
+  title={Basic principles of virtual element methods},
+  author={Beir{\~a}o da Veiga, L and Brezzi, F and Cangiani, A and Manzini, G and Marini, L D and Russo, A},
+  journal={Mathematical Models and Methods in Applied Sciences},
+  volume={23},
+  number={01},
+  pages={199--214},
+  year={2013},
+  doi={10.1051/m2an/2013138}
+}
+
+@article{da2019virtual,
+  title={The virtual element method with curved edges},
+  author={Beir{\~a}o Da Veiga, L  and Russo, A and Vacca, G},
+  journal={ESAIM: Mathematical Modelling and Numerical Analysis},
+  volume={53},
+  number={2},
+  pages={375--404},
+  year={2019},
+  doi={10.1051/m2an/2018052}
+}
+
+@article{dassi2022bend,
+  title={Bend 3d mixed virtual element method for Darcy problems},
+  author={Dassi, F and Fumagalli, A and Scotti, A and Vacca, G},
+  journal={Computers \& Mathematics with Applications},
+  volume={119},
+  pages={1--12},
+  year={2022},
+  doi={10.1016/j.camwa.2022.05.023}
+}
+
+@article{bertoluzza2019high,
+  title={High order {VEM} on curved domains},
+  author={Bertoluzza, S and Pennacchio, M and Prada, D},
+  journal={Rendiconti Lincei},
+  volume={30},
+  number={2},
+  pages={391--412},
+  year={2019},
+  doi={10.4171/rlm/853}
+}
+
+@article{frittelli2018virtual,
+  title={Virtual element method for the {Laplace}-{Beltrami} equation on surfaces},
+  author={Frittelli, M and Sgura, I},
+  journal={ESAIM: Mathematical Modelling and Numerical Analysis},
+  volume={52},
+  number={3},
+  pages={965--993},
+  year={2018},
+  doi={10.1051/m2an/2017040}
+}
+
+@article{da2018virtual,
+  title={Virtual elements for the {Navier--Stokes} problem on polygonal meshes},
+  author={Beir{\~a}o Da Veiga, L  and Lovadina, C and Vacca, G},
+  journal={SIAM Journal on Numerical Analysis},
+  volume={56},
+  number={3},
+  pages={1210--1242},
+  year={2018},
+  doi={10.1137/17m1132811}
+}
+
+@article{benedetto2014virtual,
+  title={The virtual element method for discrete fracture network simulations},
+  author={Benedetto, M F and Berrone, S and Pieraccini, S and Scial{\`o}, S},
+  journal={Computer Methods in Applied Mechanics and Engineering},
+  volume={280},
+  pages={135--156},
+  year={2014},
+  doi={10.1016/j.cma.2014.07.016}
+}
+
+@article{dassi2022virtual,
+  title={A virtual element method for the wave equation on curved edges in two dimensions},
+  author={Dassi, F and Fumagalli, A and Mazzieri, I and Scotti, A and Vacca, G},
+  journal={Journal of Scientific Computing},
+  volume={90},
+  pages={1--25},
+  year={2022},
+  doi={10.1007/s10915-021-01683-w}
+}
+
+@article{da2017high,
+  title={High-order virtual element method on polyhedral meshes},
+  author={Beir{\~a}o Da Veiga, L  and Dassi, F and Russo, A},
+  journal={Computers \& Mathematics with Applications},
+  volume={74},
+  number={5},
+  pages={1110--1122},
+  year={2017},
+  doi={10.1016/j.camwa.2017.03.021}
+}
+
+@article{vacca2015virtual,
+  title={Virtual element methods for parabolic problems on polygonal meshes},
+  author={Vacca, G and Beir{\~a}o da Veiga, L},
+  journal={Numerical Methods for Partial Differential Equations},
+  volume={31},
+  number={6},
+  pages={2110--2134},
+  year={2015},
+  doi={10.1002/num.21982}
+}
+
+@article{zhao2019nonconforming,
+  title={The nonconforming virtual element method for parabolic problems},
+  author={Zhao, J and Zhang, B and Zhu, X},
+  journal={Applied Numerical Mathematics},
+  volume={143},
+  pages={97--111},
+  year={2019},
+  doi={10.1016/j.apnum.2019.04.002}
+}
+
+@article{adak2019convergence,
+  title={Convergence analysis of virtual element methods for semilinear parabolic problems on polygonal meshes},
+  author={Adak, D and Natarajan, E and Kumar, S},
+  journal={Numerical Methods for Partial Differential Equations},
+  volume={35},
+  number={1},
+  pages={222--245},
+  year={2019},
+  doi={10.1002/num.22298 }
+}
+
+@article{xiao2022nonconforming,
+  title={The nonconforming virtual element method for semilinear elliptic problems},
+  author={Xiao, L and Zhou, M and Zhao, J},
+  journal={Applied Mathematics and Computation},
+  volume={433},
+  pages={127402},
+  year={2022},
+  doi={10.1016/j.amc.2022.127402}
+}
+
+@article{huang2021posteriori,
+  title={A posteriori error analysis of a non-consistent virtual element method for reaction diffusion equations},
+  author={Huang, J and Lin, S},
+  journal={Applied Mathematics Letters},
+  volume={122},
+  pages={107531},
+  year={2021},
+  doi={10.1016/j.aml.2021.107531}
+}
+
+@article{gain2014virtual,
+  title={On the virtual element method for three-dimensional linear elasticity problems on arbitrary polyhedral meshes},
+  author={Gain, A L and Talischi, C and Paulino, G H},
+  journal={Computer Methods in Applied Mechanics and Engineering},
+  volume={282},
+  pages={132--160},
+  year={2014},
+  doi={10.1016/j.cma.2014.05.005}
+}
+
+@article{da2013virtual,
+  title={Virtual elements for linear elasticity problems},
+  author={Beir\~{a}o Da Veiga, L  and Brezzi, F and Marini, L D},
+  journal={SIAM Journal on Numerical Analysis},
+  volume={51},
+  number={2},
+  pages={794--812},
+  year={2013},
+  doi={10.1137/120874746}
+}
+
+@article{aldakheel2019virtual,
+  title={Virtual elements for finite thermo-plasticity problems},
+  author={Aldakheel, F and Hudobivnik, B and Wriggers, P},
+  journal={Computational Mechanics},
+  volume={64},
+  pages={1347--1360},
+  year={2019},
+  doi={10.1007/s00466-019-01714-2}
+}
+
+@article{aldakheel2018phase,
+  title={Phase-field modeling of brittle fracture using an efficient virtual element scheme},
+  author={Aldakheel, F and Hudobivnik, B and Hussein, A and Wriggers, P},
+  journal={Computer Methods in Applied Mechanics and Engineering},
+  volume={341},
+  pages={443--466},
+  year={2018},
+  doi={10.1016/j.cma.2018.07.008}
+}
+
+@article{antonietti2016c,
+  title={A {$\mathcal{C}^1$} virtual element method for the {Cahn--Hilliard} equation with polygonal meshes},
+  author={Antonietti, P F and Beir\~{a}o Da Veiga, L  and Scacchi, S and Verani, M},
+  journal={SIAM Journal on Numerical Analysis},
+  volume={54},
+  number={1},
+  pages={34--56},
+  year={2016},
+  doi={10.1137/15M1008117}
+}
+
+@article{beirao2019stokes,
+  title={The {Stokes} complex for virtual elements with application to {Navier--Stokes} flows},
+  author={Beir{\~a}o da Veiga, L and Mora, D and Vacca, G},
+  journal={Journal of Scientific Computing},
+  volume={81},
+  pages={990--1018},
+  year={2019},
+  doi={10.1007/s10915-019-01049-3}
+}
+
+@article{adak2021virtual,
+  title={A virtual element discretization for the time dependent {Navier--Stokes} equations in stream-function formulation},
+  author={Adak, D and Mora, D and Natarajan, S and Silgado, A},
+  journal={ESAIM: Mathematical Modelling and Numerical Analysis},
+  volume={55},
+  number={5},
+  pages={2535--2566},
+  year={2021},
+  doi={10.1051/m2an/2021058}
+}
+
+@article{bachini2021arbitrary,
+  title={Arbitrary-order intrinsic virtual element method for elliptic equations on surfaces},
+  author={Bachini, E and Manzini, G and Putti, M},
+  journal={Calcolo},
+  volume={58},
+  number={3},
+  pages={30},
+  year={2021},
+  doi={10.1007/s10092-021-00418-5}
+}
+
+
+% LIBRARIES
+
+@article{Sutton_2016,
+	doi = {10.1007/s11075-016-0235-3},
+	year = 2016,
+	volume = {75},
+	number = {4},
+	pages = {1141--1159},
+	author = {Sutton, O J},
+	title = {The virtual element method in 50 lines of {MATLAB}},
+	journal = {Numerical Algorithms}
+}
+
+@article{Dhanush_2018,
+	doi = {10.1007/s11075-018-0516-0},
+	year = 2018,
+	volume = {80},
+	number = {3},
+	pages = {1037--1058},
+	author = {V. Dhanush and S. Natarajan},
+	title = {Implementation of the virtual element method for coupled thermo-elasticity in Abaqus},
+	journal = {Numerical Algorithms}
+}
+
+@article{Herrera_2022,
+	doi = {10.1007/s11075-022-01361-4},
+	year = 2022,
+	volume = {92},
+	number = {3},
+	pages = {1707--1721},
+	author = {Herrera, C and Corrales-Barquero, R and Arroyo-Esquivel, J and Calvo, J G},
+	title = {A numerical implementation for the high-order {2D} virtual element method in {MATLAB}},
+	journal = {Numerical Algorithms}
+}
+
+@article{dedner2021higher,
+  title={A higher order nonconforming virtual element method for the {Cahn-Hilliard} equation},
+  author={Dedner, A and Hodson, A},
+  journal={arXiv preprint arXiv:2111.11408},
+  year={2021}
+}
+
+@article{Dedner_2021,
+	doi = {10.1093/imanum/drab003},
+	year = 2021,
+	volume = {42},
+	number = {2},
+	pages = {1364--1399},
+	author = {Dedner, A and  Hodson, A},
+	title = {Robust nonconforming virtual element methods for general fourth-order problems with varying coefficients},
+	journal = {{IMA} Journal of Numerical Analysis}
+}
+
+@article{Ortiz_Bernardin_2019,
+	doi = {10.1007/s11075-018-00651-0},
+	year = 2019,
+	volume = {82},
+	number = {4},
+	pages = {1189--1220},
+	author = {Ortiz-Bernardin, A and Alvarez, C and Hitschfeld-Kahler, N and  Russo, A and Silva-Valenzuela, R and  Olate-Sanzana, E},
+	title = {Veamy: an extensible object-oriented {C++} library for the virtual element method},
+	journal = {Numerical Algorithms}
+}
+
+@misc{VEMLAB,
+  title = {VEMLAB version 2.4.1},
+  author = {Ortiz-Bernardin, A},
+  url = {https://camlab.cl/software/vemlab/},
+  note = {Accessed: 2023-03-07}
+}
+
+@article{Talischi_2012,
+	doi = {10.1007/s00158-011-0706-z},
+	year = 2012,
+	volume = {45},
+	number = {3},
+	pages = {309--328},
+	author = {Talischi, C and Paulino, G H and Pereira, A and Menezes, I F M},
+	title = {{PolyMesher}: a general-purpose mesh generator for polygonal elements written in Matlab},
+	journal = {Structural and Multidisciplinary Optimization}
+}
+
+@article{lacitignola2017turing,
+  title={Turing pattern formation on the sphere for a morphochemical reaction-diffusion model for electrodeposition},
+  author={Lacitignola, D and Bozzini, B and Frittelli, M and Sgura, I},
+  journal={Communications in Nonlinear Science and Numerical Simulation},
+  volume={48},
+  pages={484--508},
+  year={2017},
+  doi={10.1016/j.cnsns.2017.01.008}
+}
+
+@article{lacitignola2022pattern,
+  title={Pattern formation on a growing oblate spheroid.  An application to adult sea urchin development},
+  author={Lacitignola, D and Frittelli, M and Cusimano, V and De Gaetano, A},
+  journal={Journal of Computational Dynamics},
+  volume={9},
+  number={2},
+  pages={185--206},
+  year={2022},
+  doi={10.3934/jcd.2021027}
+}
+
+@article{Frittelli2017preserving,
+	doi = {10.1093/imanum/drx058},
+	year = 2017,
+	volume = {39},
+	number = {1},
+	pages = {235--270},
+	author = {Frittelli, M and Madzvamuse, A and Sgura, I and Venkataraman, C},
+	title = {Preserving invariance properties of reaction--diffusion systems on stationary surfaces},
+	journal = {{IMA} Journal of Numerical Analysis}
+}
+
+@article{Frittelli2017cross,
+	doi = {10.1016/j.camwa.2017.07.044},
+	year = 2017,
+	volume = {74},
+	number = {12},
+	pages = {3008--3023},
+	author = {Frittelli, M and Madzvamuse, A and Sgura, I and Venkataraman, C},
+	title = {Lumped finite elements for reaction--cross--diffusion systems on stationary surfaces},
+	journal = {Computers \& Mathematics with Applications}
 }
