--- a/_doc/VEMCOMP.tex
+++ b/_doc/VEMCOMP.tex
@@ -20,7 +20,7 @@
 
 \begin{document}
  
-\title{\red{VEMcomp for semilinear parabolic PDEs}}
+\title{\red{VEMcomp: A MATLAB tool for semilinear parabolic PDEs in 2D and 3D}}
 \author{Massimo Frittelli, Anotida Madzvamuse, Ivonne Sgura}
 
 \maketitle
@@ -59,24 +59,24 @@ The structure of the paper is as follows. In Section \ref{sec:overview} we state
 \begin{equation}
 \label{bulk_only_problem}
 \begin{cases}
-\left[\dfrac{\partial u_i}{\partial t}\right] - d_i^\Omega\Delta u_i = f_i(u_1,\dots, u_n, \bold x, [t]),\qquad  i=1,\dots,n;\\
-u_{i|\partial \Omega} = 0 \quad \text{or} \quad \frac{\partial u_i}{\partial \bold n}_{|\partial \Omega} = 0, \qquad  i=1,\dots,n,
+\left[\dfrac{\partial u_i}{\partial t}\right] - d_i^\Omega\Delta u_i = f_i(u_1,\dots, u_n, \bold x, [t]), \qquad \bold x \in \Omega \qquad  i=1,\dots,n;\\
+u_{i} = 0 \quad \text{or} \quad \dfrac{\partial u_i}{\partial \bold n} = 0,  \qquad \bold x \in \partial \Omega\qquad  i=1,\dots,n,
 \end{cases}
 \end{equation}
 where $\Delta$ denotes the Laplace operator in $\Omega$, $d_1^\Omega,\dots, d_n^\Omega > 0$ are diffusion coefficients $T>0$ is the final time, $f_1, \dots, f_n$ are smooth enough linear or nonlinear functions. In \eqref{bulk_only_problem}, the expressions between square brackets appear in the parabolic (time-dependent) case, but not in the elliptic (stationary) case. The general model \eqref{bulk_only_problem} comprises several notable bulk-only PDE problems that were solved with VEM in the literature, such as (i) linear \cite{beirao2013basic, da2017high,da2019virtual} and semilinear elliptic problems \cite{xiao2022nonconforming},  (ii) linear \cite{vacca2015virtual} and semilinear parabolic problems \cite{adak2019convergence} including reaction-diffusion systems \cite{huang2021posteriori}.\\
 If $\Gamma = \partial \Omega$ is a sufficiently smooth manifold, a second class of PDEs that fall in VEMcomp's domain is the following class of surface PDEs or systems of $m\in\mathbb{N}$ surface PDEs:
 \begin{equation}
 \label{surface_problems}
-\left[\frac{\partial u_j}{\partial t}\right] - d_j^\Gamma \Delta_\Gamma u_j = g_j(u_1,\dots,u_n, \bold x, [t]), \qquad j=1,\dots,m,
+\left[\frac{\partial u_j}{\partial t}\right] - d_j^\Gamma \Delta_\Gamma u_j = g_j(u_1,\dots,u_n, \bold x, [t]), \qquad \bold x \in \Gamma, \qquad j=1,\dots,m,
 \end{equation}
 where $\Delta_\Gamma$ represents the Laplace operator on $\Gamma$, $d_1^\Gamma,\dots, d_m^\Gamma > 0$ are diffusion coefficients,  $g_1, \dots, g_m$ are smooth enough linear or nonlinear functions, $T>0$ is the final time. In \eqref{surface_problems}, the expressions between square brackets appear only in the time-dependent case. The general model \eqref{surface_problems} encompasses several surface PDE (SPDE) models of interest, such as elliptic SPDEs \cite{bachini2021arbitrary, frittelli2018virtual} and surface reaction-diffusion systems (SRDSs) \cite{lacitignola2017turing, lacitignola2022pattern}.\\
 The third and most complex class of PDE problems addressed in this work is given by bulk-surface PDEs of the following form:
 \begin{equation}
 \label{bulk_surface_problems}
 \begin{cases}
-\left[\dfrac{\partial u_i}{\partial t}\right] - d_i^\Omega \Delta u_i = f_i(u_1,\dots,u_n, \bold x, [t]), \qquad i=1,\dots, n;\\
-\left[\dfrac{\partial v_j}{\partial t}\right] - d_j^\Gamma \Delta_\Gamma v_j = g_j(u_1,\dots,u_n, v_1,\dots, v_m,\bold x, [t]), \qquad j=1,\dots,m;\\
-\dfrac{\partial u_i}{\partial \bold n}_{|\Gamma} = h_i(u_1,\dots,u_n,v_1,\dots,v_m,\bold x, [t]), \qquad i=1,\dots,n,
+\left[\dfrac{\partial u_i}{\partial t}\right] - d_i^\Omega \Delta u_i = f_i(u_1,\dots,u_n, \bold x, [t]),  \qquad \bold x \in\Omega,\qquad i=1,\dots, n;\\
+\left[\dfrac{\partial v_j}{\partial t}\right] - d_j^\Gamma \Delta_\Gamma v_j = g_j(u_1,\dots,u_n, v_1,\dots, v_m,\bold x, [t]), \qquad \bold x \in \Gamma,\qquad j=1,\dots,m;\\
+\dfrac{\partial u_i}{\partial \bold n} = h_i(u_1,\dots,u_n,v_1,\dots,v_m,\bold x, [t]), \qquad \bold x \in \Gamma,\qquad i=1,\dots,n,
 \end{cases}
 \end{equation}
 where $\Delta$ and $\Delta_\Gamma$ represents the Laplace operator in $\Omega$ and the Laplace-Beltrami operator on $\Gamma$, $d_1^\Omega,\dots, d_n^\Omega,  d_1^\Gamma,\dots, d_m^\Gamma > 0$ are diffusion coefficients,  $f_1, \dots, f_n, g_1,\dots,g_m,h_1,\dots,h_n$ are smooth enough linear or nonlinear functions, and $T>0$ is the final time.  In \eqref{bulk_surface_problems}, the expressions between square brackets appear only in the time-dependent case.  We recall that the VEM was extended to bulk-surface reaction-diffusion systems (BSRDSs) in two \cite{frittelli2021bulk} and three \cite{frittelli2023bsrds} space dimensions, which fall within the general class \eqref{bulk_surface_problems}. \\
@@ -86,10 +86,9 @@ In the next Sections we will illustrate in detail the three main facilities of V
 \section{\red{Mesh generation and representation}}
 \label{sec:mesh_generation}
 
+\red{Polygonal and polyhedral mesh generation is a niche topic, and very little software is available.  For domains in two space dimensions, we mention PolyMesher \cite{Talischi_2012}. To the best of the authors' knowledge, there is no open-source software for polyhedral mesh generation in three space dimensions. For special three dimensional domains,  VEMcomp fills this gap. We point out that, when restricted to triangular (in 2D) or tetrahedral meshes (in 3D), the Virtual Element Method of low polynomial order $k=1$ boils down to the Finite Element Method. This means that VEMcomp can be used as a FEM solver for surface and bulk-surface PDEs, when provided with triangular/tetrahedral meshes,  for which countless open-source generators exist.  We start by presenting basic classes that allow to represent single elements in two and three space dimensions. }
 
-Polygonal and polyhedral mesh generation is a niche topic, and very little software is available.  For domains in two space dimensions, we mention PolyMesher \cite{Talischi_2012}. To the best of the authors' knowledge, there is no open-source software for polyhedral mesh generation in three space dimensions. For special three dimensional domains,  VEMcomp fills this gap. We point out that, when restricted to triangular (in 2D) or tetrahedral meshes (in 3D), the Virtual Element Method of low polynomial order $k=1$ boils down to the Finite Element Method. This means that VEMcomp can be used as a FEM solver for surface and bulk-surface PDEs, when provided with triangular/tetrahedral meshes,  for which countless open-source generators exist.  We start by presenting basic classes that allow to represent single elements in two and three space dimensions. 
-
-\subsection{The class \texttt{element2d\_dummy}}
+\subsection{\red{The class \texttt{element2d\_dummy}}}
 The class \texttt{element2d\_dummy} represent a polygonal element in 2D. It contains minimal information that uniquely identify the element. To create an element with \texttt{NVert} vertexes, use the following constructor
 \begin{lstlisting}
 	obj = element2d_dummy(P);
@@ -116,7 +115,7 @@ defined as follows:
 \item The logical \texttt{is\_square} determines if the \texttt{element2d\_dummy} is a square (for which the local VEM matrices are known in closed form).
 \end{itemize}
 
-\subsection{The class \texttt{element3d\_dummy}}
+\subsection{\red{The class \texttt{element3d\_dummy}}}
 The class \texttt{element3d\_dummy} represent a polyhedral element in 3D. It contains minimal information that uniquely identify the element. To create an element with \texttt{NVert} vertexes and \texttt{NFaces} faces, use the following constructor
 \begin{lstlisting}
 	obj = element3d_dummy(P,Faces)
@@ -141,7 +140,7 @@ defined as follows:
 \item The logical \texttt{is\_cube} determines if the \texttt{element3d\_dummy} is a cube (for which the local VEM matrices are known in closed form).
 \end{itemize}
 
-\subsection{Generating meshes for special geometries}
+\subsection{\red{Generating meshes for special geometries}}
 
 
 \section{Computation of local matrices}
@@ -514,6 +513,7 @@ K = \frac{1}{16}&\left[\begin{array}{c c c c c c c c}
       -1     &        -3      &    \ \      1       &      -1      &    \ \     1       &      -1       &   \ \      3       &    \ \     1       \\
       -3       &      -1       &      -1     &     \ \      1      &       -1      &   \ \       1     &      \ \     1        &   \ \     3    
 \end{array}\right]\\
+\ \\
 + \frac{\sqrt{3}}{4}&\left[\begin{array}{c c c c c c c c}
  \ \  2      &       -1       &      -1            &  \ \  0       &      -1      &      \ \     0      &      \ \    0             & \ \   1       \\
       -1     &        \ \    2       &    \ \      0      &      -1      &       \ \    0       &      -1        &    \ \     1              &  \ \  0       \\
@@ -525,6 +525,8 @@ K = \frac{1}{16}&\left[\begin{array}{c c c c c c c c}
      \ \     1       &      \ \    0       &   \ \       0     &        -1       &      \ \    0       &      -1        &     -1    &      \ \       2   \\
 \end{array}\right];
 \end{split}\\
+\notag
+\ \\
 %
 \label{mass_3d}
 M = \frac{1}{96}&\left[\begin{array}{c c c c c c c c}
@@ -592,7 +594,6 @@ E =
 By querying the stiffness and mass matrices of \texttt{E}, we can see the outputs
 
 \begin{lstlisting}
->> format
 >> E.K
 
 ans =
@@ -606,7 +607,6 @@ ans =
    -0.0625   0.2455  -0.3705  -0.0625  -0.3705  -0.0625   1.0535  -0.3705
     0.2455  -0.0625  -0.0625  -0.3705  -0.0625  -0.3705  -0.3705   1.0535
       
->> format rat
 >> E.M
 
 ans =
